# Lightshield

./: .dockerignore  .env  .gitignore  Config.md  Docker.md  Dockerfile_RabbitMQ  Dockerfile_Service  Jenkinsfile  LICENSE  Makefile  Notes.md  README  README.md  Rate Limiting.md  Service_Dockerfile  compose-databases.yaml  compose-global.yaml  compose-persistent.yaml  compose-redis.yaml  compose-services.yaml  compose_global.yaml  config.json  config_in_docker.yaml  docker-compose-dev.yaml  docker-compose.yaml  drakebane.yaml  push.py  pyproject.toml  requirements.txt  riot.txt  secrets.env  secrets_template.env  setup.py  startup.sh  test_provider.py  tox.ini
api_component/: Dockerfile  api.py  limits.json  requirements.txt  run.py  templates.py
configs/: api_methods.json
databases/postgres/: 00_db_init.sql  Dockerfile  br1.sql  db_init.sql  eun1.sql  eune1.sql  euw1.sql  jp1.sql  kr.sql  la1.sql  la2.sql  na1.sql  oc1.sql  player_euw.sql  ru.sql  tr1.sql
databases/redis/: Dockerfile
db_worker/: Dockerfile  manage.py  run.py  startup.sh
db_worker/data/: models.py
db_worker/dbWorker/: settings.py
drakebane/: Dockerfile  deploy.yaml
drakebane/backend/: Dockerfile  main.py  pyproject.toml  server.py  settings_default.json  startup.sh  temp.py
drakebane/frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
drakebane/k8s/: config.yaml  league-v4-exp.yaml  redis-service.yaml  redis.yaml
drakebane/service/: index.html  pyproject.toml  run.py  temp.py
league_updater/: Dockerfile  __init__.py  manage.py  requirements.txt  run.py  setup.py  startup.sh  wait-for-it.sh
league_updater/data/: apps.py  models.py
league_updater/league_updater/: asgi.py  settings.py  urls.py  wsgi.py
lightshield/: __init__.py  config.py  connection_handler.py  exceptions.py  postgres.py  settings.py  statics.py
lightshield/cli_commands/: crate.py  postgres.py
lightshield/crate_templates/: match.sql  ranking.sql  ranking_lock.sql  requests.sql  summoner.sql
lightshield/drakebane/: __init__.py  platform.py
lightshield/league_ranking/: __init__.py  service.py  startup.sh
lightshield/per_platform/: participant.sql
lightshield/postgres_templates/: match.sql  match_partition.sql  player.sql  rank_distribution.sql  ranking.sql  ranking_partition.sql  requests.sql  summoner.sql
lightshield/proxy/: __init__.py  endpoint.py  layers.py  main.py  middleware.py
lightshield/rabbitmq_defaults/: __init__.py  local_buffer.py
lightshield/services/: __init__.py
lightshield/templates/: config.yaml
lightshield/tests/: __init__.py
lol_dto/: match.py  player.py  summoner.py  team.py
lua_scripts/: permit.lua  pseudo.lua  setup_scripts.sh  update.lua
manager/: Dockerfile  config.json  container.py  container.yaml  requirements.txt  run.py  server.py  websocket_worker.py
manager/container/: __init__.py  main.py
manager/server/: __init__.py  database.py  main.py  service.py
match_history_updater/: Dockerfile  requirements.txt  run.py  setup.py
match_updater/: run.py
playerdata/: Dockerfile  db_init.sql  manage.py  match.sql  player_euw.sql  player_init_template.sql  player_kr.sql  player_na.sql
playerdata/data/: models.py
playerdata/playerdata/: settings.py
postgres/: 00_db_init.sql  Dockerfile  match.sql  participant.sql  setup.sh  summoner.sql  team.sql
postgres/startup_script_templates/: 00_schemas.sql  01_ranking.sql  02_schemas_regions.sql  (+2 more)
processor/: Dockerfile  startup.sh
proxy/: Dockerfile  client.py  docker-compose.yaml  endpoints.yaml  limits.json  main.py  pyproject.toml  requirements.txt  run.old  run.py  run_.py  setup.py  startup.sh  test.py
proxy/scripts/: permit_handler.lua  update_ratelimits.lua
rabbitmq/: Dockerfile
redis/: Dockerfile  redis.conf  setup_scripts.sh  startup.sh
services/base/: Dockerfile  pyproject.toml  requirements.txt  settings.py  startup.sh
services/base/connection_manager/: buffer.py  persistent.py
services/league_ranking/: main.py  pyproject.toml  rank_manager.py  service.py  startup.sh  test.py
services/league_ranking/standalone/: Dockerfile  pyproject.toml  rank_manager.py  run.py  temp.py
services/match_details/: Dockerfile  db_connector.py  handler.py  helper.py  logic.py  pyproject.toml  requirements.txt  run.py  runes.py  service.py  startup.sh
services/match_details/manager/: run.py
services/match_details/tables/: __init__.py  match.py  summoner.py
services/match_details/tables/enums/: __init__.py
services/match_details/worker/: logic.py  pyproject.toml  run.py
sqlite/: NA1_summoner_ids.db-journal
summoner_id_updater/: Dockerfile  requirements.txt  run.py  setup.py
temp/: client.py  client_socket.py  handler.py  limits.json  rabbitmq_speed_tests.py  server.py  server_2.py  server_tornado.py
(+331 files in other folders)
