[tool.poetry]
name = "Lightshield"
version = "0.3.21.4b"
description = "Library part of the Lightshield tool."
license = 'Apache-2.0'
repository = 'https://github.com/LightshieldDotDev/Lightshield'
authors = ["Doctress <lightshielddev@gmail.com>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
