[tool.poetry]
name = "Lightshield"
version = "0.4.0.5b"
description = "Library part of the Lightshield tool."
license = 'Apache-2.0'
repository = 'https://github.com/LightshieldDotDev/Lightshield'
authors = ["Doctress <lightshielddev@gmail.com>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.7.4"
aioredis = "^2.0.1"
uvloop = "^0.16.0"
asyncpg = "^0.25.0"
PyYAML = "^6.0"
python-dotenv = "^0.20.0"
aio-pika = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lightshield = "lightshield:main"
