[tool.poetry]
name = "Lightshield_League_Ranking_Standalone"
version = "2.0.0"
description = "Base image for Lightshield services."
authors = ["Doctress"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.23.0"
aioredis = "^1.3.1"
aiohttp = "^3.7.4"
uvloop = "^0.15.2"
lightshield = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
